Better AboutBox, better PDB loading.

--- a/source/app/resources/app.qrc
+++ b/source/app/resources/app.qrc
@@ -1,6 +1,7 @@
 <!DOCTYPE RCC>
 <RCC version="1.0">
-    <qresource>
-        <file>license.txt</file>
-    </qresource>
+  <qresource>
+    <file>license.txt</file>
+    <file>logo.png</file>
+  </qresource>
 </RCC>
